--- a/Project/account.html
+++ b/Project/account.html
@@ -12,21 +12,27 @@
         <div class="grid">
             <div class="flex">
                 <div class="list">
+
                     <p class="list__list1--title--font2">Manage My Account</p>
                     <ul class="list__list1">
-                        <li class="list__item1--item1"></li>
-                        <li class="list__item1--item2"></li>
-                        <li class="list__item1--item3"></li>
+                        <li class="list__item1--item1">My Profile</li>
+                        <li class="list__item1--item2">Address Book</li>
+                        <li class="list__item1--item3">My Paymen Options</li>
                     </ul>
+
+                    <p class="list__list2--title--font2">My Orders</p>
                     <ul class="list__list2">
-                        <li class="list__item2--item1"></li>
-                        <li class="list__item2--item2"></li>
+                        <li class="list__item2--item1">My returns</li>
+                        <li class="list__item2--item2">My Cancellations</li>
                     </ul>
-                    <ul class="list__wishlist">
+
+                    <p class="list__list3--title--font2">My WishList</p>
+                    <ul class="list__list3">
+
                     </ul>
                 </div>
                 <div class="profile__title"> 
-                    <p class="profile__title--font1">My Profile</p>
+                    <p class="profile__title--font1">Edit Your Profile</p>
                 </div>
             </div>
         </div>  
