--- a/Project/about.html
+++ b/Project/about.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header class="header">
             <div class="grid">
-                <nav class="navbar">
+                <nav class="header__navbar">
                     <div class="navbar__logo-wrapper">
                         <h1 class="navbar__title">Exclusive</h1>
                     </div>
@@ -45,19 +45,101 @@
                         <div class="search__wrapper">
                             <input type="text" class="search__input" placeholder="What are you looking for?">
                             <a href="" class="search__icon">
-                                <i class="fa-solid fa-magnifying-glass"></i>
+                                <i class="fa-solid fa-magnifying-glass fa-2xl"></i>
                             </a>
                         </div>
 
                         <div class="info__icon">
-                            <a href="" class="info__icon-link">Icon</a>
-                            <a href="" class="info__icon-link">Icon</a>
-                            <a href="" class="info__icon-link">Icon</a>
+                            <a href="" class="info__icon-link">
+                                <i class="fa-regular fa-heart fa-2xl"></i>
+                            </a>
+                            <a href="" class="info__icon-link">
+                                <i class="fa-solid fa-cart-shopping fa-2xl"></i>
+                            </a>
+                            <a href="" class="info__icon-link">
+                                <i class="fa-regular fa-user fa-2xl"></i>
+                            </a>
                         </div>
                     </div>
                 </nav>
             </div>
         </header>
+
+
+        <footer class="footer">
+            <div class="grid">
+                <div class="footer__lists">
+                    <div class="footer__subscribe">
+                        <h1 class="footer__title">Exclusive</h1>
+                        <h2 class="subscribe__title">Subscibe</h2>
+                        <p class="subscribe__desc">
+                            Get 10% off your first order
+                            <div class="subscribe__input-wrapper">
+                                <input type="text" name="" id="" class="subscribe__input" placeholder="Enter your email">
+                                <a href="" class="subscribe__icon">
+                                    <i class="fa-regular fa-paper-plane fa-rotate-by fa-2xl" style="--fa-rotate-angle: 45deg;"></i>
+                                </a>
+                            </div>
+                        </p>
+                    </div>
+                    <div class="footer__subscribe">
+                        <h1 class="footer__title">Exclusive</h1>
+                        <h2 class="subscribe__title">Subscibe</h2>
+                        <p class="subscribe__desc">
+                            Get 10% off your first order
+                            <div class="subscribe__input-wrapper">
+                                <input type="text" name="" id="" class="subscribe__input" placeholder="Enter your email">
+                                <a href="" class="subscribe__icon">
+                                    <i class="fa-regular fa-paper-plane fa-rotate-by fa-2xl" style="--fa-rotate-angle: 45deg;"></i>
+                                </a>
+                            </div>
+                        </p>
+                    </div>
+                    <div class="footer__subscribe">
+                        <h1 class="footer__title">Exclusive</h1>
+                        <h2 class="subscribe__title">Subscibe</h2>
+                        <p class="subscribe__desc">
+                            Get 10% off your first order
+                            <div class="subscribe__input-wrapper">
+                                <input type="text" name="" id="" class="subscribe__input" placeholder="Enter your email">
+                                <a href="" class="subscribe__icon">
+                                    <i class="fa-regular fa-paper-plane fa-rotate-by fa-2xl" style="--fa-rotate-angle: 45deg;"></i>
+                                </a>
+                            </div>
+                        </p>
+                    </div>
+                    <div class="footer__subscribe">
+                        <h1 class="footer__title">Exclusive</h1>
+                        <h2 class="subscribe__title">Subscibe</h2>
+                        <p class="subscribe__desc">
+                            Get 10% off your first order
+                            <div class="subscribe__input-wrapper">
+                                <input type="text" name="" id="" class="subscribe__input" placeholder="Enter your email">
+                                <a href="" class="subscribe__icon">
+                                    <i class="fa-regular fa-paper-plane fa-rotate-by fa-2xl" style="--fa-rotate-angle: 45deg;"></i>
+                                </a>
+                            </div>
+                        </p>
+                    </div>
+                    <div class="footer__subscribe">
+                        <h1 class="footer__title">Exclusive</h1>
+                        <h2 class="subscribe__title">Subscibe</h2>
+                        <p class="subscribe__desc">
+                            Get 10% off your first order
+                            <div class="subscribe__input-wrapper">
+                                <input type="text" name="" id="" class="subscribe__input" placeholder="Enter your email">
+                                <a href="" class="subscribe__icon">
+                                    <i class="fa-regular fa-paper-plane fa-rotate-by fa-2xl" style="--fa-rotate-angle: 45deg;"></i>
+                                </a>
+                            </div>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__copyright">
+                <h3 class="copyright__title">&copy; Copyright Rimel 2022. All right reserved</h3>
+            </div>
+        </footer>
     </div>
 
     <script src="https://kit.fontawesome.com/1792eb4629.js" crossorigin="anonymous"></script>
