--- a/Project/log-in.html
+++ b/Project/log-in.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
-<html= lang="en">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Styles/login.css" type="text/css" />
+    <title>Login</title>
+</head>
 <body>
     <div class="container">
-        <div class="container__logo">
-            <img src="CleanShot 2025-01-06 at 17.15.17@2x.png" alt="">
+        <div class="grid">
+            <div class="wrapper">
+                <div class="wrapper__logo">
+                    <img src="./LOGO.png" alt="Company Logo">
+                </div>
+                <div class="wrapper__content">
+                    <div class="wrapper__content__title">
+                        <h1>Log in to Exclusive</h1>
+                        <h4>Enter your details below</h4>
+                    </div>
+                    <div class="wrapper__input__data">
+                        <label for="username"></label>
+                        <input type="text" id="username" placeholder="Email or Phone Number" required>
+                        <label for="password"></label>
+                        <input type="password" id="password" placeholder="Password" required>
+                    </div>
+                    <button type="submit">Log In</button>
+                    <a href="#" class="forget-password">Forget Password?</a>   
+                </div>
+            </div>
         </div>
     </div>
 </body>
