--- a/Project/Sign-In.html
+++ b/Project/Sign-In.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Styles/login.css" type="text/css" />
+    <link rel="stylesheet" href="./Styles/Sign-in.css" type="text/css" />
     <title>Login</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
                 </div>
                 <div class="wrapper__content">
                     <div class="wrapper__content__title">
-                        <h1>Log in to Exclusive</h1>
+                        <h1>Sign In</h1>
                         <h4>Enter your details below</h4>
                     </div>
                     <div class="wrapper__input__data">
@@ -23,9 +23,11 @@
                         <input type="text" id="username" placeholder="Email or Phone Number" required>
                         <label for="password"></label>
                         <input type="password" id="password" placeholder="Password" required>
+                        <label for="Confirmpassword"></label>
+                        <input type="password" id="Confirm-password" placeholder="Confirm Password" required>
                     </div>
-                    <button type="submit">Log In</button>
-                    <a href="#" class="forget-password">Forget Password?</a>   
+                    <button type="submit">Sign In</button>
+                    <a href="#" class="account">Already have account?</a>   
                 </div>
             </div>
         </div>
