--- a/Project/Sign-In.html
+++ b/Project/Sign-In.html
@@ -20,7 +20,11 @@
                     </div>
                     <div class="wrapper__input__data">
                         <label for="username"></label>
-                        <input type="text" id="username" placeholder="Email or Phone Number" required>
+                        <input type="text" id="username" placeholder="Username" required>
+                        <label for="email"></label>
+                        <input type="email" id="email" placeholder="Email" required>
+                        <label for="PhoneNumber"></label>
+                        <input type="text" id="PhoneNumber" placeholder="Phone Number" required>
                         <label for="password"></label>
                         <input type="password" id="password" placeholder="Password" required>
                         <label for="Confirmpassword"></label>
