--- a/Project/index.html
+++ b/Project/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exclusive</title>
+    <link rel="stylesheet" href="./Styles/main.css">
 </head>
 <body>
-    
+    <div id="header-wrapper">
+
+    </div>
+    <div id="footer-wrapper">
+
+    </div>
+
+    <script src="./Scripts/script.js"></script>
 </body>
 </html>
