--- a/Project/account.html
+++ b/Project/account.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./Styles/account.css">
     <title>Account</title>
 </head>
-<body>  
+<body>
+    <div id="header-wrapper">
+        
+    </div>
+
     <div class="container">
         <div class="grid">
             <div class="flex">
@@ -77,5 +81,12 @@
         </div>  
 
     </div>
+
+    <div id="footer-wrapper">
+
+    </div>
+
+
+    <script src="./Scripts/script.js"></script>
 </body>
 </html>
