--- a/Project/header.html
+++ b/Project/header.html
@@ -34,19 +34,19 @@
                 <div class="search__wrapper">
                     <input type="text" class="search__input" placeholder="What are you looking for?">
                     <a href="" class="search__icon">
-                        <i class="fa-solid fa-magnifying-glass fa-2xl"></i>
+                        <img src="/Project/assets/main/icon-magnify.png" alt="" class="search__img">
                     </a>
                 </div>
 
                 <div class="info__icon">
                     <a href="" class="info__icon-link">
-                        <i class="fa-regular fa-heart fa-2xl"></i>
+                        <img src="/Project/assets/main/icon-heart.png" alt="" class="info__icon-img">
                     </a>
                     <a href="" class="info__icon-link">
-                        <i class="fa-solid fa-cart-shopping fa-2xl"></i>
+                        <img src="/Project/assets/main/icon-shoppingcart.png" alt="" class="info__icon-img">
                     </a>
                     <a href="" class="info__icon-link">
-                        <i class="fa-regular fa-user fa-2xl"></i>
+                        <img src="/Project/assets/main/icon-user.png" alt="" class="info__icon-img">
                     </a>
                 </div>
             </div>
