--- a/Project/about.html
+++ b/Project/about.html
@@ -155,6 +155,6 @@
         </div>
     </div>
 
-    <script src="https://kit.fontawesome.com/1792eb4629.js" crossorigin="anonymous"></script>
+    <script src="/Project/Scripts/script.js"></script>
 </body>
 </html>
