--- a/Project/checkout.html
+++ b/Project/checkout.html
@@ -57,7 +57,7 @@
                                 <ul class="products__lists">
                                     <li class="products__items">
                                         <div class="items__info">
-                                            <img src="./assets/Gamepad-Cart-Small.png" alt="" class="items__img">
+                                            <img src="./assets/checkout/Gamepad-Cart-Small.png" alt="" class="items__img">
                                             <h4 class="items__title">LCD Monitor</h4>
                                         </div>
                                         <span class="items__price">
@@ -66,7 +66,7 @@
                                     </li>
                                     <li class="products__items">
                                         <div class="items__info">
-                                            <img src="./assets/Monitor-Cart-Small.png" alt="" class="items__img">
+                                            <img src="./assets/checkout/Monitor-Cart-Small.png" alt="" class="items__img">
                                             <h4 class="items__title">H1 Gamepad</h4>
                                         </div>
                                         <span class="items__price">
@@ -106,10 +106,10 @@
                                         </div>
 
                                         <div class="payment__img-wrapper">
-                                            <img src="./assets/Bkash.png" alt="" class="payment__img">
-                                            <img src="./assets/visa.png" alt="" class="payment__img">
-                                            <img src="./assets/mastercard.png" alt="" class="payment__img">
-                                            <img src="./assets/image 33.png" alt="" class="payment__img">
+                                            <img src="./assets/checkout/Bkash.png" alt="" class="payment__img">
+                                            <img src="./assets/checkout/visa.png" alt="" class="payment__img">
+                                            <img src="./assets/checkout/mastercard.png" alt="" class="payment__img">
+                                            <img src="./assets/checkout/image 33.png" alt="" class="payment__img">
                                         </div>
                                     </div>
                                     <div class="payment__type--cash">
