--- a/Project/Sign-In.html
+++ b/Project/Sign-In.html
@@ -8,33 +8,43 @@
 </head>
 <body>
     <div class="container">
+        <div id="header-wrapper"></div>
         <div class="grid">
             <div class="wrapper">
-                <div class="wrapper__logo">
-                    <img src="./LOGO.png" alt="Company Logo">
+                <div class="wrapper__advertise">
+                    <img src="./assets/main/advertise-picture.png" alt="advertise-picture">
                 </div>
                 <div class="wrapper__content">
                     <div class="wrapper__content__title">
-                        <h1>Sign In</h1>
+                        <h1>Create an account</h1>
                         <h4>Enter your details below</h4>
                     </div>
                     <div class="wrapper__input__data">
+                        <label for="name"></label>
+                        <input type="text" id="name" placeholder="Name" required>
                         <label for="username"></label>
-                        <input type="text" id="username" placeholder="Username" required>
-                        <label for="email"></label>
-                        <input type="email" id="email" placeholder="Email" required>
-                        <label for="PhoneNumber"></label>
-                        <input type="text" id="PhoneNumber" placeholder="Phone Number" required>
+                        <input type="text" id="username" placeholder="Email or Phone Number" required>
                         <label for="password"></label>
                         <input type="password" id="password" placeholder="Password" required>
                         <label for="Confirmpassword"></label>
                         <input type="password" id="Confirm-password" placeholder="Confirm Password" required>
                     </div>
-                    <button type="submit">Sign In</button>
-                    <a href="#" class="account">Already have account?</a>   
+                    <div class="submit__btn">
+                        <button type="submit">Create Account</button>
+                    </div>
+                    <div class="google__btn">
+                        <button type="button"><img src="./assets/main/Google-logo.svg.png"> Sign up with Google</button>
+                    </div>
+                    <div class="Login">
+                        <p>Already have account?</p>
+                        <a href="#" class="account">Log in</a>   
+                    </div>
                 </div>
             </div>
         </div>
+        <div id="footer-wrapper"></div>
+
     </div>
 </body>
 </html>
+<script src="./Scripts/script.js"></script>
