--- a/Project/index.html
+++ b/Project/index.html
@@ -1,20 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exclusive</title>
-    <link rel="stylesheet" href="./Styles/main.css">
-</head>
-<body>
-    <div id="header-wrapper">
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Exclusive</title>
+    </head>
+    <body>
+        <div class="header-wrapper">
 
-    </div>
-    
-    <div id="footer-wrapper">
-
-    </div>
-
-    <script src="./Scripts/script.js"></script>
-</body>
-</html>
+        </div>
+        <div class="footer-wrapper">
+            
+        </div>
+        <script src="./Scripts/script.js"></script>
+    </body>
+    </html>
