--- a/Project/account.html
+++ b/Project/account.html
@@ -17,50 +17,50 @@
             <div class="flex">
                 <div class="list">
 
-                    <h2 class="list__list1--title--font2">Manage My Account</h2>
+                    <h2 class="list__list1--title head">Manage My Account</h2>
                     <ul class="list__list1">
-                        <li class="list__item1--item1">My Profile</li>
-                        <li class="list__item1--item2">Address Book</li>
-                        <li class="list__item1--item3">My Paymen Options</li>
+                        <li class="list__item1--item1 listleft">My Profile</li>
+                        <li class="list__item1--item2 listleft">Address Book</li>
+                        <li class="list__item1--item3 listleft">My Paymen Options</li>
                     </ul>
 
-                    <h2 class="list__list2--title--font2">My Orders</h2>
+                    <h2 class="list__list2--title head">My Orders</h2>
                     <ul class="list__list2">
-                        <li class="list__item2--item1">My returns</li>
-                        <li class="list__item2--item2">My Cancellations</li>
+                        <li class="list__item2--item1 listleft">My returns</li>
+                        <li class="list__item2--item2 listleft">My Cancellations</li>
                     </ul>
 
-                    <h2 class="list__list3--title--font2">My WishList</h2>
+                    <h2 class="list__list3--title head">My WishList</h2>
                     <ul class="list__list3">
 
                     </ul>
                 </div>
-                <div class="profile">
+                <div class="profile listleft">
                     <div class="profile__title"> 
-                        <h2 class="profile__title--font1">Edit Your Profile</h2>
+                        <h2 class="profile__title head">Edit Your Profile</h2>
                     </div>
                     <div class="profile__infos">
                         <div class="pad profile__infos--name flex">
-                            <div class="pad profile__infos--left">
+                            <div class="pad profile__infos--left blackimportant">
                                 <label for="fname">First name</label><br>
                                 <input type="text" id="fname" name="fname" placeholder=" Md" value=""><br>
                             </div>
-                            <div class="pad profile__infos--right">
-                                <label for="lname">Last name</label><br>
+                            <div class="pad profile__infos--right blackimportant">
+                                <label for="lname  listleft">Last name</label><br>
                                 <input type="text" id="lname" name="lname" placeholder=" Rimel" value=""><br>
                             </div>  
                         </div>
                         <div class="pad profile__infos--contact flex">
-                            <div class="profile__infos--left">
+                            <div class="profile__infos--left blackimportant">
                                 <label for="email">Email</label><br>
                                 <input type="email" id="email" name="email" placeholder=" rimel1111@gmail.com" value=""><br>
                             </div>
-                            <div class="pad profile__infos--right">
+                            <div class="pad profile__infos--right blackimportant">
                                 <label for="address">Address</label><br>
                                 <input type="text" id="address" name="address" placeholder=" Kingston, 5236, United State" value=""><br>
                             </div>
                         </div>
-                        <div class="pad profile__infos--password">
+                        <div class="pad profile__infos--password headimportant">
                             <h2>Password Changes</h2>
                             <input class="mar" type="text" id="current__password" name="current__password" placeholder=" Current Password" value=""><br>
                             <input class="mar" type="text" id="new__password" name="new__password" placeholder=" New Password" value=""><br>
