--- a/Project/cart.html
+++ b/Project/cart.html
@@ -43,7 +43,7 @@
                 <ul class="cart__products">
                     <li class="products__wrapper">
                         <div class="products__desc">
-                            <img src="" alt="" class="products__img">
+                            <img src="/Project/assets/cart/monitor.png" alt="" class="products__img">
                             <h4 class="products__title">LCD Monitor</h4>
                         </div>
                     </li>
@@ -54,7 +54,7 @@
                     </li>
                     <li class="products__wrapper">
                         <h4 class="products__title">
-                            <input type="number" name="" id="" class="products__quantity">
+                            <input type="number" name="" id="" class="products__quantity" value="0">
                         </h4>
                     </li>
                     <li class="products__wrapper">
@@ -66,8 +66,8 @@
 
                 <ul class="cart__products">
                     <li class="products__wrapper">
-                        <div class="product__desc">
-                            <img src="" alt="" class="products__img">
+                        <div class="products__desc">
+                            <img src="/Project/assets/cart/gamepad.png" alt="" class="products__img">
                             <h4 class="products__title">LCD Monitor</h4>
                         </div>
                     </li>
@@ -78,7 +78,7 @@
                     </li>
                     <li class="products__wrapper">
                         <h4 class="products__title">
-                            <input type="number" name="" id="" class="products__quantity">
+                            <input type="number" name="" id="" class="products__quantity" value="0">
                         </h4>
                     </li>
                     <li class="products__wrapper">
@@ -100,7 +100,7 @@
 
             <div class="cart__checkout">
                 <div class="checkout__coupon">
-                    <input type="text" name="" id="" class="coupon__input">
+                    <input type="text" name="" id="coupon" class="coupon__input" placeholder="Coupon Code">
                     <button class="coupon__submit">
                         Apply Coupon
                     </button>
@@ -110,17 +110,32 @@
                         Cart Total
                     </h1>
                     <div class="checkout__info">
-                        <h4 class="checkout__price">
-
-                        </h4>
+                        <div class="checkout__price-wrapper">
+                            <h4 class="price__title">
+                                Subtotal:
+                            </h4>
+                            <h4 class="price">
+                                $1750
+                            </h4>
+                        </div>
                         <hr class="separators">
-                        <h4 class="checkout__price">
-
-                        </h4>
+                        <div class="checkout__price-wrapper">
+                            <h4 class="price__title">
+                                Shipping:
+                            </h4>
+                            <h4 class="price">
+                                Free
+                            </h4>
+                        </div>
                         <hr class="separators">
-                        <h4 class="checkout__price">
-
-                        </h4>
+                        <div class="checkout__price-wrapper">
+                            <h4 class="price__title">
+                                Total:
+                            </h4>
+                            <h4 class="price">
+                                $1750
+                            </h4>
+                        </div>
                     </div>
 
                     <button class="checkout__button">
