uhhh idk mb some cool shits

--- a/Project/homepage.html
+++ b/Project/homepage.html
@@ -39,8 +39,10 @@
                 </div>
             </div>
             <div class="title flex" style="height: fit-content;width: fit-content;">
+                <div style="display:flex;padding: 10%;">
                 <div style="background-color: red; padding: 5px; border-radius: 20%;"></div>
                 <p class="font1" style="color: red !important;font-weight: bold!important; padding-left: 10px; ">Today's</p>
+                </div>
             </div>
             <div class="title__con flex font2" style="font-weight: bold;">
                 <p style="padding: 0% !important;">Flash Sales</p>
